- (internet) Ipv6 routing protocols must now *not* forward packets to upper layers
  unless for extremey specific cases. The Ipv6L3protocol handles almost all the
  packets directed to the host.
- (internet) Ipv6 can now reject packets directed to an address not configured on 
  the interface they are received from (Strong End System Model, RFC 1222).

Bugs fixed
----------
- Bug 1132 - useless for loops in block-ack-test-suite.cc
- Bug 1571 - TCP zero-window and flow control window updates by the receiver
- Bug 1761 - Rounding with olsr::EmfToSeconds
- Bug 1954 - Serialized size of wifi-net-device differ for TX and RX trace
- Bug 2003 - Missing DSSS short PLCP preamble
- Bug 2041 - TCP RTO needs unit tests
- Bug 2150 - The TCP sender keeps retransmitting and does not terminate the connection after some retries.
- Bug 2159 - TCP advertises wrong receive window
- Bug 2176 - Building IPv4 address from char* doesn't look reliable
- Bug 2183 - LiIonEnergySourceHelper is not in the energy wscript
- Bug 2185 - WiFi MacLow may respond to errored frames that it should ignore
- Bug 2193 - Simulation fails when transmitting very small MPDU subframes
- Bug 2195 - Udp[*]Client can't send packets to broadcast address
- Bug 2201 - Simulation fails when active probing is used in 802.11n/ac with channel bonding enabled
- Bug 2207 - Print node ID and time when printing routing tables
- Bug 2206 - Split internet-apps from applications
- Bug 2208 - Interface index based L4 protocols
- Bug 2211 - Ipv{4,6}EndPoint can cause memory corruption
- Bug 2219 - SixLowPanNetDevice hangs trying to decode a IPv6 Fragment extension header
- Bug 2233 - Implement RFC 1222 - Strong End System Model
- Bug 2238 - Ipv6 routing reorganization

Known issues
------------
In general, known issues are tracked on the project tracker available
at http://www.nsnam.org/bugzilla/

Release 3.24.1
==============

Release 3.24.1 is a maintenance release that fixes three issues: